--- a/Views/Games/Edit.cshtml
+++ b/Views/Games/Edit.cshtml
@@ -1,12 +1,11 @@
 ﻿@model FutsalApp.Models.Game
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Book";
 }
 
-<h1>Edit</h1>
+<h1>Reserve the game</h1>
 
-<h4>Game</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -28,58 +27,193 @@
                 <input asp-for="GameDate" class="form-control" readonly />
                 <span asp-validation-for="GameDate" class="text-danger"></span>
             </div>
+
+            @{ if (string.IsNullOrEmpty(Model.Player1))
+                {
+                    <div class="form-group">
+                        <label asp-for="Player1" class="control-label">Name of reserving person</label>
+                        <input asp-for="Player1" class="form-control" />
+                        <span asp-validation-for="Player1" class="text-danger"></span>
+                    </div>
+                }
+                else
+                {
+                    <div style="display:none" class="form-group">
+                        <label asp-for="Player1" class="control-label"></label>
+                        <input asp-for="Player1" class="form-control" readonly />
+                        <span asp-validation-for="Player1" class="text-danger"></span>
+                    </div>
+                }
+
+            }
+            @{ if (string.IsNullOrEmpty(Model.Player2))
+                {
+                    <div class="form-group">
+                        <label asp-for="Player2" class="control-label">Name of reserving person</label>
+                        <input asp-for="Player2" class="form-control" />
+                        <span asp-validation-for="Player2" class="text-danger"></span>
+                    </div>
+                }
+                else
+                {
+                    <div style="display:none" class="form-group">
+                        <label asp-for="Player2" class="control-label"></label>
+                        <input asp-for="Player2" class="form-control" readonly />
+                        <span asp-validation-for="Player2" class="text-danger"></span>
+                    </div>
+                }
+
+            }
+            @{ if (string.IsNullOrEmpty(Model.Player3))
+                {
+                    <div class="form-group">
+                        <label asp-for="Player3" class="control-label">Name of reserving person</label>
+                        <input asp-for="Player3" class="form-control" />
+                        <span asp-validation-for="Player3" class="text-danger"></span>
+                    </div>
+                }
+                else
+                {
+                    <div style="display:none" class="form-group">
+                        <label asp-for="Player3" class="control-label"></label>
+                        <input asp-for="Player3" class="form-control" readonly />
+                        <span asp-validation-for="Player3" class="text-danger"></span>
+                    </div>
+                }
+
+            }
+            @{ if (string.IsNullOrEmpty(Model.Player4))
+                {
+                    <div class="form-group">
+                        <label asp-for="Player4" class="control-label">Name of reserving person</label>
+                        <input asp-for="Player4" class="form-control" />
+                        <span asp-validation-for="Player4" class="text-danger"></span>
+                    </div>
+                }
+                else
+                {
+                    <div style="display:none" class="form-group">
+                        <label asp-for="Player4" class="control-label"></label>
+                        <input asp-for="Player4" class="form-control" readonly />
+                        <span asp-validation-for="Player4" class="text-danger"></span>
+                    </div>
+                }
+
+            }
+
+            @{ if (string.IsNullOrEmpty(Model.Player5))
+                {
+                    <div class="form-group">
+                        <label asp-for="Player5" class="control-label">Name of reserving person</label>
+                        <input asp-for="Player5" class="form-control" />
+                        <span asp-validation-for="Player5" class="text-danger"></span>
+                    </div>
+                }
+                else
+                {
+                    <div style="display:none" class="form-group">
+                        <label asp-for="Player5" class="control-label"></label>
+                        <input asp-for="Player5" class="form-control" readonly />
+                        <span asp-validation-for="Player5" class="text-danger"></span>
+                    </div>
+                }
+
+            }
+
+            @{ if (string.IsNullOrEmpty(Model.Player6))
+                {
+                    <div class="form-group">
+                        <label asp-for="Player6" class="control-label">Name of reserving person</label>
+                        <input asp-for="Player6" class="form-control" />
+                        <span asp-validation-for="Player6" class="text-danger"></span>
+                    </div>
+                }
+                else
+                {
+                    <div style="display:none" class="form-group">
+                        <label asp-for="Player6" class="control-label"></label>
+                        <input asp-for="Player6" class="form-control" readonly />
+                        <span asp-validation-for="Player6" class="text-danger"></span>
+                    </div>
+                }
+
+            }
+            @{ if (string.IsNullOrEmpty(Model.Player7))
+                {
+                    <div class="form-group">
+                        <label asp-for="Player7" class="control-label">Name of reserving person</label>
+                        <input asp-for="Player7" class="form-control" />
+                        <span asp-validation-for="Player7" class="text-danger"></span>
+                    </div>
+                }
+                else
+                {
+                    <div style="display:none" class="form-group">
+                        <label asp-for="Player7" class="control-label"></label>
+                        <input asp-for="Player7" class="form-control" readonly />
+                        <span asp-validation-for="Player7" class="text-danger"></span>
+                    </div>
+                }
+
+            }
+            @{ if (string.IsNullOrEmpty(Model.Player8))
+                {
+                    <div class="form-group">
+                        <label asp-for="Player8" class="control-label">Name of reserving person</label>
+                        <input asp-for="Player8" class="form-control" />
+                        <span asp-validation-for="Player8" class="text-danger"></span>
+                    </div>
+                }
+                else
+                {
+                    <div style="display:none" class="form-group">
+                        <label asp-for="Player8" class="control-label"></label>
+                        <input asp-for="Player8" class="form-control" readonly />
+                        <span asp-validation-for="Player8" class="text-danger"></span>
+                    </div>
+                }
+
+            }
+            @{ if (string.IsNullOrEmpty(Model.Player9))
+                {
+                    <div class="form-group">
+                        <label asp-for="Player9" class="control-label">Name of reserving person</label>
+                        <input asp-for="Player9" class="form-control" />
+                        <span asp-validation-for="Player9" class="text-danger"></span>
+                    </div>
+                }
+                else
+                {
+                    <div style="display:none" class="form-group">
+                        <label asp-for="Player9" class="control-label"></label>
+                        <input asp-for="Player9" class="form-control" readonly />
+                        <span asp-validation-for="Player9" class="text-danger"></span>
+                    </div>
+                }
+
+            }
+            @{ if (string.IsNullOrEmpty(Model.Player10))
+                {
+                    <div class="form-group">
+                        <label asp-for="Player10" class="control-label">Name of reserving person</label>
+                        <input asp-for="Player10" class="form-control" />
+                        <span asp-validation-for="Player10" class="text-danger"></span>
+                    </div>
+                }
+                else
+                {
+                    <div style="display:none" class="form-group">
+                        <label asp-for="Player10" class="control-label"></label>
+                        <input asp-for="Player10" class="form-control" readonly />
+                        <span asp-validation-for="Player10" class="text-danger"></span>
+                    </div>
+                }
+
+            }
+
+
             <div class="form-group">
-                <label asp-for="Player1" class="control-label"></label>
-                <input asp-for="Player1" class="form-control" />
-                <span asp-validation-for="Player1" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Player2" class="control-label"></label>
-                <input asp-for="Player2" class="form-control" />
-                <span asp-validation-for="Player2" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Player3" class="control-label"></label>
-                <input asp-for="Player3" class="form-control" />
-                <span asp-validation-for="Player3" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Player4" class="control-label"></label>
-                <input asp-for="Player4" class="form-control" />
-                <span asp-validation-for="Player4" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Player5" class="control-label"></label>
-                <input asp-for="Player5" class="form-control" />
-                <span asp-validation-for="Player5" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Player6" class="control-label"></label>
-                <input asp-for="Player6" class="form-control" />
-                <span asp-validation-for="Player6" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Player7" class="control-label"></label>
-                <input asp-for="Player7" class="form-control" />
-                <span asp-validation-for="Player7" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Player8" class="control-label"></label>
-                <input asp-for="Player8" class="form-control" />
-                <span asp-validation-for="Player8" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Player9" class="control-label"></label>
-                <input asp-for="Player9" class="form-control" />
-                <span asp-validation-for="Player9" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Player10" class="control-label"></label>
-                <input asp-for="Player10" class="form-control" />
-                <span asp-validation-for="Player10" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Confirm" class="btn btn-primary" />
             </div>
         </form>
     </div>
