--- a/Views/Games/Index.cshtml
+++ b/Views/Games/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<FutsalApp.Models.Game>
 
 @{
-    ViewData["Title"] = "List of reservation";
+    ViewData["Title"] = "List of next games";
 }
 
-<h1>Index</h1>
+<h1>List of next games</h1>
 
 <table class="table">
     <thead>
@@ -97,8 +97,8 @@
                         @Html.DisplayFor(modelItem => item.Player10)
                     </td>
                     <td>
-                        <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                        <a asp-action="Details" asp-route-id="@item.Id">Details</a>
+                        <a asp-action="Edit" asp-route-id="@item.Id">Reservation</a> 
+                        
                     </td>
                 </tr>
             }
