authorizations added and some text improved

--- a/Views/Games/Cancel103472.cshtml
+++ b/Views/Games/Cancel103472.cshtml
@@ -4,8 +4,6 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
-
 <h4>Game</h4>
 <hr />
 <div class="row">
@@ -73,9 +71,9 @@
                 <input asp-for="Player9" class="form-control" />
                 <span asp-validation-for="Player9" class="text-danger"></span>
             </div>
-            <label>I am not going to play on this date</label>
+            <label>I am <b>not going</b> to play on this date</label>
             <div class="form-group">
-                <input type="submit" value="Confirm" class="btn btn-primary" />
+                <input type="submit" value="Resign" class="btn btn-primary" />
             </div>
         </form>
     </div>
