--- a/Views/Home/Rules.cshtml
+++ b/Views/Home/Rules.cshtml
@@ -1,6 +1,10 @@
 ﻿@{
-    ViewData["Title"] = "Privacy Policy";
+    ViewData["Title"] = "Rules";
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>1. The game takes place in the sports hall at Primary School No. 153 on Strąkowa Street.</p>
+<p>2. The hall is booked at 6:00 p.m., so please don't be late!</p>
+<p>3. Suitable shoes for changing with a light sole are required in the hall.</p>
+<p>4. Before the game, we are divided into two teams: black and white. Please bring T-shirts in each of these two colors.</p>
+<p>5. Fair play rules apply during the game. We do not tolerate fouls and tackles.</p>
