--- a/Views/Games/Cancel17923.cshtml
+++ b/Views/Games/Cancel17923.cshtml
@@ -4,8 +4,6 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
-
 <h4>Game</h4>
 <hr />
 <div class="row">
@@ -28,7 +26,6 @@
                 <input asp-for="GameDate" class="form-control" readonly />
                 <span asp-validation-for="GameDate" class="text-danger"></span>
             </div>
-            <label>I am not going to play on this date</label>
 
             <div style="display: none" class="form-group">
                 <label asp-for="Player2" class="control-label"></label>
@@ -75,8 +72,11 @@
                 <input asp-for="Player10" class="form-control" />
                 <span asp-validation-for="Player10" class="text-danger"></span>
             </div>
+            
+            <label>I am <b>not going</b> to play on this date</label>
+
             <div class="form-group">
-                <input type="submit" value="Confirm" class="btn btn-primary" />
+                <input type="submit" value="Resign" class="btn btn-primary" />
             </div>
         </form>
     </div>
