--- a/Views/Games/Cancel58942.cshtml
+++ b/Views/Games/Cancel58942.cshtml
@@ -4,8 +4,6 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
-
 <h4>Game</h4>
 <hr />
 <div class="row">
@@ -48,7 +46,6 @@
                 <input asp-for="Player4" class="form-control" />
                 <span asp-validation-for="Player4" class="text-danger"></span>
             </div>
-            <label>I am not going to play on this date</label>
             <div style="display: none" class="form-group">
                 <label asp-for="Player6" class="control-label"></label>
                 <input asp-for="Player6" class="form-control" />
@@ -74,8 +71,11 @@
                 <input asp-for="Player10" class="form-control" />
                 <span asp-validation-for="Player10" class="text-danger"></span>
             </div>
+
+            <label>I am <b>not going</b> to play on this date</label>
+
             <div class="form-group">
-                <input type="submit" value="Confirm" class="btn btn-primary" />
+                <input type="submit" value="Resign" class="btn btn-primary" />
             </div>
         </form>
     </div>
