--- a/Views/Games/AdminEdit.cshtml
+++ b/Views/Games/AdminEdit.cshtml
@@ -12,7 +12,7 @@
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" />
+            <input type="text" asp-for="Id" />
             <div class="form-group form-check">
                 <label class="form-check-label">
                     <input class="form-check-input" asp-for="IsGame" /> @Html.DisplayNameFor(model => model.IsGame)
